plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.13'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.statoverflow'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	jwtVersion = '0.12.6'
	securityVersion = '3.3.0'
	securityTestVersion = '6.3.0'
	googleOAuth2Version = '2.7.2'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// Spring Security
	implementation "org.springframework.boot:spring-boot-starter-security:${securityVersion}"
	testImplementation "org.springframework.security:spring-security-test:${securityTestVersion}"

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
	implementation "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
	implementation "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"

	// Google OAuth2
//	implementation("com.google.api-client:google-api-client:${googleOAuth2Version}")// https://mvnrepository.com/artifact/com.google.auth/google-auth-library-oauth2-http
	implementation("com.google.auth:google-auth-library-oauth2-http:1.37.1")


}

tasks.named('test') {
	useJUnitPlatform()
}
